# tbai_mujoco

./: .gitignore  CMakeLists.txt  README.md  pixi.toml  setup.bash
example/: CMakeLists.txt  stand_go2.cpp  stand_go2.py
examples/: CMakeLists.txt
simulate/: CMakeLists.txt  config.yaml
simulate/configs/: config_anymal_b.yaml  config_anymal_c.yaml  config_anymal_d.yaml  config_franka.yaml  config_g1.yaml  config_go2.yaml  config_go2w.yaml  config_spot.yaml  config_spot_arm.yaml
simulate/src/: depth_image_server.h  main.cc  param.h  physics_joystick.h  pointcloud_server.h  tbai_bridge.h  utils.hpp  video_server.h
simulate/src/joystick/: joystick.cc  joystick.h
